--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -14,10 +14,10 @@
   <dd> {{capitalizaName}} </dd>
 </dl>
 
-<button class="btn btn-primary mx-2">
+<button class="btn btn-primary mx-2" (click)="changeHero()">
   Cambiar Nombre
 </button>
 
-<button class="btn btn-primary">
+<button class="btn btn-primary" (click)="changeAge()">
   Cambiar Edad
 </button>
