--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -14,10 +14,25 @@
   <dd> {{capitalizaName}} </dd>
 </dl>
 
-<button class="btn btn-primary mx-2" (click)="changeHero()">
+<button
+  *ngIf="name !== 'Superman'"
+  class="btn btn-primary mx-2"
+  (click)="changeHero()"
+>
   Cambiar Nombre
 </button>
 
-<button class="btn btn-primary" (click)="changeAge()">
+<button
+  *ngIf="age !== 30"
+  class="btn btn-primary mx-2"
+  (click)="changeAge()"
+>
   Cambiar Edad
+</button>
+
+<button
+  class="btn btn-primary"
+  (click)="resetForm()"
+>
+  Reset
 </button>
