--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,7 +1,20 @@
 <h4>Agregar Personaje</h4>
 <form class="row ">
-  <input class="form-control mb-2" type="text" placeholder="Nombre">
-  <input class="form-control mb-2" type="number" placeholder="Poder">
+  <input
+    class="form-control mb-2"
+    [(ngModel)] = "character.name"
+    name="name"
+    type="text"
+    placeholder="Nombre">
 
-  <button type="submit" class="btn btn-primary">Agregar</button>
+  <input
+    class="form-control mb-2"
+    [(ngModel)] = "character.power"
+    name="power"
+    type="number"
+    placeholder="Poder">
+
+  <button type="submit" class="btn btn-primary" (click)="emitCharacter()">Agregar</button>
+
+  <pre>{{character | json }}</pre>
 </form>
