--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,5 +1,5 @@
 <h4>Agregar Personaje</h4>
-<form class="row ">
+<form class="row " (ngSubmit)="emitCharacter()">
   <input
     class="form-control mb-2"
     [(ngModel)] = "character.name"
@@ -14,7 +14,7 @@
     type="number"
     placeholder="Poder">
 
-  <button type="submit" class="btn btn-primary" (click)="emitCharacter()">Agregar</button>
+  <button type="submit" class="btn btn-primary">Agregar</button>
 
   <pre>{{character | json }}</pre>
 </form>
