--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -7,6 +7,6 @@
   </div>
 
   <div class="col">
-    <app-dbz-add-character></app-dbz-add-character>
+    <app-dbz-add-character (onNewCharacter)="onNewCharacter($event)"></app-dbz-add-character>
   </div>
 </div>
