--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col">
-    <app-dbz-list [characterList]="dbzService.characters" (onDeleteId)="dbzService.onDeleteCharacter($event)"></app-dbz-list>
+    <app-dbz-list [characterList]="dbzService.characters" (onDeleteId)="dbzService.deleteCharacterById($event)"></app-dbz-list>
   </div>
 
   <div class="col">
